Markup/css/styles.css
/* ... */
.app-sort-bar {
    top: 9em;
    position: relative;
}
.app-listing {
    position: relative;
    top: 11em;
}
#seach-apps {
    border-radius: 0px;
    height: 40px;
    font-size: 18px;
    font-weight: 300;
}
.app-sort-bar .search i {
    color: #303030;
    position: absolute;
    top: 6px;
    right: 22px;
    cursor: pointer;
}
.app-sort-bar .sort i {
    color: #fff;
}
.cloud-app-listing {
    width: 100%;
    position: relative;
    margin-bottom: 2em;
    cursor: pointer;
}
.cloud-app-listing i {
    position: absolute;
    z-index: 98;
    right: 16px;
    padding: 6px;
    background-color: #383d44;
    top: 0;
}
.app-thumb span {
    padding: 7px;
    background-color: #626262;
    border-radius: 19px;
    width: 33px;
    z-index: 99;
    position: absolute;
    left: 130px;
    top: 135px;
}
.app-thumb span i {
    padding-left: 4px;
}
.app-icon {
    z-index: 99;
    z-index: 99;
}
.app-icon img {
    width: 100%;
    max-height: 273px;
    min-height: 273px;
}
.app-name {
    position: absolute;
    background-color: red;
    bottom: 0;
    padding: 9px 5px 2px;
    width: 100%;
    min-height: 3em;
    font-size: 17px;
    background-color: #383d44;
    font-weight: 300;
}
/* cloud app details */

.side-pane-trigger {
    float: left;
    margin-left: 14px;
    margin-top: -1px;
    background-color: #006690
}
.side-pane-trigger i {
    padding: 15px 15px 14px;
    cursor: pointer;
    font-size: 1.5em;
}
.side-pane-trigger:hover {
    background-color: #005578
}
.right-pane {
    position: absolute;
    width: 100%;
}
.left-pane {
    position: fixed;
    width: 18em;
    z-index: 98;
    background-color: #222222;
    left: -18em;
    top: 53px;
    min-height: 100%;
}
.notification-pane {
    position: fixed;
    width: 24em;
    z-index: 100;
    background-color: #222222;
    right: 0em;
    top: 103px;
    min-height: 100%;
}
.notification-pane-trigger {
    position: absolute;
    left: -54px;
    padding: 17px;
    height: 53px;
    background-color: rgb(34, 34, 34);
    cursor: pointer;
}
.notifications {
    padding: 10px 6px 10px;
    overflow-y: scroll;
}
.notification-msg {
    padding: 5px 10px;
    background-color: rgb(46, 46, 46);
    margin-bottom: 7px;
    float: left;
    width: 100%;
    border-left: 4px solid;
}
.noti-success {
    color: #40d47e;
    border-left-color: #40d47e;
}
.noti-warning {
    color: #f39c12;
    border-left-color: #f39c12;
}
.noti-error {
    color: #e74c3c;
    border-left-color: #e74c3c;
}
.notifications .notification-time {
    color: #666;
    font-size: .7em;
    float: left;
    margin-left: 23px;
    margin-top: 6px;
}
.msg>span {
    color: rgb(182, 182, 182);
    display: block;
    float: left;
    width: 90%;
}
.notification-msg i {
    margin-right: 5px;
    float: left;
    width: 7%;
    margin-top: 4px;
}
.app-content-section {
    margin-top: 7em;
}
.left-pane ul {
    margin-top: 70px;
    list-style: none;
    -webkit-margin-after: 0em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
    -webkit-padding-start: 0px;
}
.left-pane ul li {
    padding: 16px 22px 18px;
    cursor: pointer;
}
.left-pane ul li i {
    padding-right: 10px;
    font-size: 1.5em;
}
.left-pane ul li:hover {
    background-color: #101010;
}
.block-general {
    margin-top: 1em;
    background-color: #34495e;
    padding: 18px;
    min-height: 26em;
}
.block-general h3,
.block-team h3,
.block-database h3 {
    font-weight: 300;
    margin-top: 8px;
}
.block-general h3 {
    margin-bottom: 30px;
}
.version-number,
.version-url {
    float: left;
    padding: 10px;
    background-color: #8b8b8b;
    border-color: transparent;
}
.version-url {
    width: 50%;
}
.sec .ctrl-edit-button {
    margin-left: -3px;
    margin-top: -2px;
}
.block-life-cycle,
.block-repos,
.block-issues,
.block-team,
.block-database {
    margin-top: 1em;
    padding: 18px 18px 4px;
}
.block-team {
    background-color: #95a5a6;
}
.block-database {
    background-color: #0090d9;
}
.block-life-cycle {
    background-color: #0090d9;
    min-height: 23em;
}
.block-repos {
    background-color: #735f87;
    min-height: 23em;
}
.block-issues {
    background-color: #0aa699;
    min-height: 23em;
}
.block-action-button {
    width: 40%;
    text-align: right;
    float: right;
    padding: 8px;
    cursor: pointer;
}
.block-database,
.block-team {
    width: 100%;
}
.block-number {
    font-size: 5em;
    font-weight: 300;
    margin-top: -14px;
}
.block-team .block-action-button:hover {
    background-color: rgb(111, 121, 122);
}
.block-database .block-action-button:hover {
    background-color: rgb(0, 95, 143)
}
.block-team .block-icon,
.block-database .block-icon {
    margin-top: 1em;
}
.btn-create-version {
    float: right;
    padding: 8px;
    cursor: pointer;
}
.btn-create-version:hover {
    background-color: rgb(29, 42, 56);
}
.block-life-cycle .block-action-button {
    width: 45%;
}
.block-life-cycle .block-action-button:hover {
    background-color: rgb(0, 95, 143);
}
.block-description-multiline {
    margin-left: 4em;
    font-size: 1.3em;
    font-weight: 300;
    border-left: 1px solid #fff;
    padding: 10px 20px;
}
.block-description {
    font-size: 1.3em;
    font-weight: 300;
}
.btn-edit li {
    font-size: 1.42em;
    font-weight: 100;
}
.left-pane .selected {
    background-color: #101010;
}
/* issues page */

.msg-issues {
    background: #464646;
    padding: 40px 20px 10px;
    font-size: 1.2em;
    font-weight: 300;
}
.gray-hr {
    border-top: 1px solid #333;
    margin-top: 60px;
}
.comment-line {
    margin-bottom: 20px;
}
.comment-line:last-child {
    margin-bottom: 50px;
}
.comment-line p {
    color: #999;
    padding: 20px;
    background: #202020;
    border: 1px solid #353535;
    margin-bottom: 0px;
}
.comment-line>span {
    padding: 4px 8px;
    color: #666;
    font-size: 11px;
    background: #353535;
}
/* ... */

